# mneme

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  PRODUCT.md  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  audit.py  main.py  store.py
docs/: api.md
tests/: conftest.py  test_api.py  test_audit.py  test_store.py
web/: app.js  index.html  styles.css  ui-theme-standard.css
